Comment out passage headers on css and js

--- a/src/TopC_00_Setup/Story Stylesheet.css
+++ b/src/TopC_00_Setup/Story Stylesheet.css
@@ -1,4 +1,4 @@
-:: Story Stylesheet [stylesheet @#P9937 @#Fold000] {"position":"125,250"}
+/* :: Story Stylesheet [stylesheet @#P9937 @#Fold000] {"position":"125,250"} */
 
 
 /**********************************************************************
