--- a/src/00_Setup/Story Stylesheet.css
+++ b/src/00_Setup/Story Stylesheet.css
@@ -1,4 +1,5 @@
-/* :: Story Stylesheet [stylesheet ] {"position":"125,250"} */
+/* :: Story Stylesheet [stylesheet ] {"position":"125,250"}
+ */
 
 
 /**********************************************************************
